--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -2,7 +2,7 @@ FROM python:latest
 
 MAINTAINER Mouaz
 
-COPY src /usr/src/app
+COPY ./src /usr/src/app
 
 RUN pip install -r /usr/src/app/requirements.txt
 
