--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -1,11 +1,11 @@
 name: 'Auto Integration'
-description: 'A GitHub action that runs a local bash script to build a docker image, remove old containers and run new one'
-author: 'Mouaz Tabboush'
-inputs:
-  token:
-    required: false
-    description: 'Defines the token to use to execute the git API requests with, uses `env.GITHUB_TOKEN` by default
-
+on:
+  workflow_dispatch:
+    inputs:
+      input:
+        description: "Test"
+        required: false
+        default: "World"
 jobs:
   run_tests:
     runs-on: ubuntu-20.04
